# mateu

./: .easignore  .gitignore  .sonarcloud.properties  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  SECURITY.md  lombok.config  pom.xml  qodana.yaml  settings.xml  todo.md
.claude/: settings.json
.dev/: arch-guide.md  arch.md  dump.sh  notes.md  test.http  todo.md  vaadin-icons.xml  x.json
.github/: dependabot.yml  mygpgkey_sec.gpg  public.pgp
apidocs/: index.html
backend/: build.gradle.kts  pom.xml  settings.gradle.kts
backend/python/: DESIGN.md  README.md  pyproject.toml  requirements.txt
backend/python/mateu_core/: __init__.py  importwizard.py  labels_aside_inference.py  layout_inference.py  mapper.py  naming.py  page_inference.py  page_type_inference.py  reflection.py  registry.py  sync_handler.py
backend/python/mateu_dtos/: __init__.py
backend/python/mateu_fastapi/: __init__.py
backend/python/mateu_uidl/: __init__.py  components.py
backend/python/samples/demo/: main.py  views.py
backend/python/tests/: test_archetype_calendarpage.py  test_archetype_todolist.py  test_archetypes_collection_overview.py  test_auto_page.py  test_command_center.py  test_data_management.py  test_drawer_crud_and_rail.py  test_gantt_page.py  test_global_search.py  test_import_wizard.py  test_labels_aside.py  test_layout_inference.py  test_notifications.py  test_optimistic_lock.py  test_page_type.py  test_peer_nav.py  test_section_features.py  test_sync_handler.py  test_undoable_message.py  test_ux_components.py  test_welcome_banner.py
(+16879 files in other folders)
