[project]
name = "mateu"
version = "0.1.0"
description = "Mateu server-side for Python — annotate Python classes; any Mateu renderer renders them."
requires-python = ">=3.11"
dependencies = ["fastapi>=0.110", "uvicorn>=0.27", "pydantic>=2.6"]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
